se corregio las obeservaciones: datos por defectos, modificacion de prePersist, actualizacion, error 404, paginacion al buscar por nombre, categoria y estado, endpoint de actualizar categoria, entre otros